fix(im):chat with person error

--- a/packages/im/src/component/im-contacts/address-popover/address-popover.component.html
+++ b/packages/im/src/component/im-contacts/address-popover/address-popover.component.html
@@ -6,7 +6,7 @@
   nzPopoverTrigger="hover"
   nzPopoverPlacement="bottomLeft"
   [nzPopoverContent]="addressTemplate"
-  (dblclick)="chatWithPercon(contact)"
+  (dblclick)="chatWithPerson(contact)"
   [src]="contact.profilePictureId ? formatImAvatarUrl(contact.profilePictureId) : 'assets/images/im/avatar-2.png'"
 />
 
